# chatGPT-for-genetics

./: ask_opentargets.py  ask_opentargets_complex_chaining.py  ask_opentargets_langchain.py  get_num_tokens.py  graphql_query_apoe.txt  graphql_query_tamoxifen.txt  graphql_query_ulcerative_colitis.txt  graphql_query_vorinostat.txt  pyproject.toml  query_2023_07_04-10_40_08_AM.txt
